Xlint fixes
Fixes for:

  Double(double) in java.lang.Double has been deprecated
  Integer(int) in java.lang.Integer has been deprecated